<resources>
    <string name="app_name">loginsignupapp</string>
    <string name="hello_user">Hello User</string>
    <string name="welcome_to_registration_form">Welcome to Registration Form</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="select_your_age">Select Age:</string>
    <string name="hobby">Hobby :</string>
    <string name="reading">Reading</string>
    <string name="traveling">Traveling</string>
    <string name="shopping">Shopping</string>
    <string name="cooking">Cooking</string>
    <string name="submit">Submit</string>
    <string name="entername">Enter Name</string>
    <string name="entersurname">Enter Surname</string>
    <string name="enterdob">Enter DOB</string>
    <string name="back">Back</string>
    <string name="datasubmit">Data Submit</string>
    <string name="userdelete">User Delete </string>
    <string name="areyoursureforsubmit">Are you sure for Submit?</string>
    <string name="areyoursurefordelete">Are you sure for delete ?</string>
    <string name="save">save</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="password">Password :</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="update">update</string>
    <string name="delete">Delete</string>
    <string name="remember_me">Remember me</string>
    <string name="textview">TextView</string>
</resources>