<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background_signup"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="240dp"
        android:elevation="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_signup" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="Log-In"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_email"
            android:hint="@string/enter_email"
            style="@style/style_label_textview"
            android:padding="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_height="wrap_content"
            tools:ignore="TouchTargetSizeCheck"
            android:background="@drawable/background_editext"
            android:gravity="left|center_vertical"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_password"
            style="@style/style_label_textview"
            android:padding="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck"
            android:background="@drawable/background_editext"
            android:gravity="left|center_vertical"
            android:hint="@string/enter_password" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:text="@string/remember_me"
            android:layout_below="@+id/edittext_password"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_gravity="center"
            android:background="@drawable/background_editext"
            android:textColor="@color/black"
            android:text="@string/login"
        />

        <TextView
            android:id="@+id/textview_line_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15"
            android:layout_gravity="center"
            android:text="@string/don_t_have_an_account_sign_up"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>