<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/Constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/image_first_page_background"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView13"
            android:layout_width="200dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_home_form"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Sign-up"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView13"
            app:layout_constraintStart_toStartOf="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edittext_firstname"
                    style="@style/style_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/first_name"

                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edittext_lastname"
                    style="@style/style_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_2"
                    android:hint="@string/last_name" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview_email"
                    style="@style/style_labels"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:text="Email :"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edittext_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:backgroundTint="@color/slide_black"
                    android:hint="@string/enter_email"
                    android:textAlignment="center"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="@dimen/sp_13" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview_password"
                    style="@style/style_labels"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:text="@string/password"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:backgroundTint="@color/slide_black"
                    android:inputType="textPassword"
                    android:hint="@string/enter_password"
                    android:textAlignment="center"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="@dimen/sp_13" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView03"
                    style="@style/style_labels"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/gender"
                    />

                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/male_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:fontFamily="@font/poppins"
                        android:text="@string/male"
                        android:textColor="@color/dark_gray"
                        android:buttonTint="@color/slide_black"
                        android:textSize="@dimen/sp_13" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/female_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:fontFamily="@font/poppins"
                        android:paddingEnd="@dimen/dp_10"
                        android:text="@string/female"
                        android:buttonTint="@color/slide_black"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/sp_13" />
                </RadioGroup>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview_dob"
                    style="@style/style_labels"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:text="@string/date_of_birth"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edittext_dob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:backgroundTint="@color/slide_black"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="Select here"
                    android:textAlignment="center"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="@dimen/sp_13" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textview_age"
                    style="@style/style_labels"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/select_your_age"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:gravity="center_vertical"
                    />

                <NumberPicker
                    android:id="@+id/numberpicker"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_55"
                    android:layout_weight="2"
                    android:background="@drawable/background_edittext"
                    android:selectionDividerHeight="@dimen/dp_0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

                </NumberPicker>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:orientation="horizontal">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textview_hobby"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins"
                            android:text="@string/hobby"
                            android:gravity="center_vertical"
                            android:textColor="@color/black" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkbox_hobby_reading"
                            style="@style/style_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:text="@string/reading" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkbox_hobby_traveling"
                            style="@style/style_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:text="@string/traveling" />

                    </TableRow>

                    <TableRow>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_weight="1"
                            android:paddingTop="@dimen/dp_12"
                            android:text="Hobby : "
                            android:textAlignment="textStart"
                            android:textSize="@dimen/sp_15"
                            android:visibility="invisible" />


                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkbox_hobby_shopping"
                            style="@style/style_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:text="@string/shopping" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkbox_hobby_cooking"
                            style="@style/style_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:text="@string/cooking" />


                    </TableRow>


                </TableLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:background="@drawable/custom_bordered_ripple"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.95" />


    </androidx.constraintlayout.widget.ConstraintLayout>