<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_second_page_background"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/baseline_person_pin_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/textview"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_fullname">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/background_textview"
            android:elevation="@dimen/dp_8">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/label_gender"
                style="@style/style_label_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/baseline_transgender_24"
                android:gravity="center_vertical"
                android:imeActionLabel="Done"
                android:imeOptions="actionDone"
                android:maxWidth="@dimen/dp_240"
                android:text="@string/app_name" />

            <ImageView
                android:id="@+id/editicon_gender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/dp_38"
                android:src="@drawable/baseline_edit_24" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/background_textview"
            android:elevation="@dimen/dp_8"
            android:gravity="left">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/label_dateofbirth"
                style="@style/style_label_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/baseline_cake_24"

                android:gravity="center_vertical" />

            <ImageView
                android:id="@+id/editicon_dateofbirth"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/dp_38"
                android:src="@drawable/baseline_edit_24" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/background_textview"
            android:elevation="@dimen/dp_8">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/label_age"
                style="@style/style_label_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/baseline_perm_contact_calendar_24"
                android:text="@string/app_name" />

            <ImageView
                android:id="@+id/editicon_age"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/dp_38"
                android:src="@drawable/baseline_edit_24" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/background_textview"
            android:elevation="@dimen/dp_8"
            android:gravity="left">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/label_hobby"
                style="@style/style_label_textview"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"

                android:drawableStart="@drawable/baseline_auto_awesome_24"
                android:gravity="center_vertical"
                android:text="@string/app_name" />

            <ImageView
                android:id="@+id/editicon_hobby"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/dp_38"
                android:src="@drawable/baseline_edit_24" />
        </TableRow>

    </TableLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_textview"
        android:text="@string/update"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_textview"
        android:text="@string/delete"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_update"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>

